--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "~bootstrap/*": ["./node_modules/bootstrap/*"]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
